<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowAppForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/playerName"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/characterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/characterName"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/characterClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/characterClass"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/race"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/prehistory"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/prehistory"
                android:inputType="textMultiLine"
                android:padding="15dp"

                android:scrollbars="vertical"

                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/charIdeology"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/ideology"
                android:inputType="none"
                android:padding="15dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/characterTraits"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/traits"
                android:inputType="none"
                android:padding="15dp"
                android:scrollbars="vertical"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/characterIdeals"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/ideals"
                android:inputType="textMultiLine"
                android:padding="15dp"

                android:scrollbars="vertical"

                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/charAffections"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/affections"
                android:inputType="textMultiLine"
                android:padding="15dp"

                android:scrollbars="vertical"

                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/charWeaknesses"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/weaknesses"
                android:inputType="textMultiLine"
                android:padding="15dp"

                android:scrollbars="vertical"

                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/levelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/button_and_text"
                android:padding="10dp"
                android:text="@string/level"
                android:textColor="@color/button_text_color"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <Button
                    android:id="@+id/levelBtnInc"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:textAlignment="center"
                    android:layout_toLeftOf="@+id/level"
                    android:background="@drawable/btn_app_form"
                    android:text="-"
                    android:textColor="@color/button_text_color"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/level"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/levelBtnDec"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_toRightOf="@+id/level"
                    android:background="@drawable/btn_app_form"
                    android:text="+"
                    android:textAlignment="center"
                    android:textColor="@color/button_text_color"
                    android:textSize="16dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/expPointsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/button_and_text"
                android:padding="10dp"
                android:text="@string/experiencePoints"
                android:textColor="@color/button_text_color"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

                <Button
                    android:id="@+id/expPointsBtnInc"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_toLeftOf="@+id/expPoints"
                    android:background="@drawable/btn_app_form"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/button_text_color"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/expPoints"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/expPointsBtnDec"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_toRightOf="@+id/expPoints"
                    android:background="@drawable/btn_app_form"
                    android:text="+"
                    android:textAlignment="center"
                    android:textColor="@color/button_text_color"
                    android:textSize="16dp" />

            </RelativeLayout>



            <Button
                android:id="@+id/buttonAddData"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"

                android:layout_marginTop="40dp"

                android:textAlignment="center"
                android:background="@drawable/btn_app_form"
                android:fontFamily="@font/button_and_text"
                android:text="@string/btn_Save"
                android:textColor="@color/button_text_color"
                android:textSize="14dp" />

            <Button
                android:id="@+id/buttonDataPrev"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/btn_app_form"
                android:fontFamily="@font/button_and_text"
                android:text="@string/btn_Prev"
                android:textColor="@color/button_text_color"
                android:textSize="14dp" />


        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>