<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowAppForm"
    android:clickable="true"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMtg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/btn_MagicTheGathering"
                android:textSize="32dp"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:onClick="onClickStartMTG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/mtg" />


                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counter_Infect"
                    android:padding="10dp"
                    android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/reset"
                    android:padding="5dp"
                    android:background="@drawable/btn_app_form"
                    android:textColor="@color/button_text_color"
                    android:textSize="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    />

                <Button
                    android:id="@+id/btnAddPlayer"
                    android:layout_width="180dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="match_parent"
                    android:text="@string/add_player"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:padding="5dp"
                    android:background="@drawable/btn_app_form"
                    android:textColor="@color/button_text_color"
                    android:textSize="14dp"
                    android:onClick="onClickAddMtgPlayer"

                    />

            </RelativeLayout>

            <com.diegodobelo.expandingview.ExpandingList
                android:id="@+id/mtgPlayersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.diegodobelo.expandingview.ExpandingList>

            <Button
                android:layout_width="200dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/button_text_color"
                android:background="@drawable/btn_app_form"
                android:text="@string/btn_Next"
                android:onClick="onClickStartMTG"
                android:layout_height="35dp">

            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>