<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/windowAppForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/attacksNSpells"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/attacksNSpells"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:scrollbars="vertical"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/skillsNAbilities"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/skillsNAbilities"
                android:inputType="textMultiLine"

                android:padding="15dp"
                android:scrollbars="vertical"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/OtherPossessionsNSkills"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/filds"
                android:fontFamily="@font/button_and_text"
                android:hint="@string/OtherPossessionsNSkills"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:scrollbars="vertical"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/for_input_text_color"
                android:textSize="20dp" />

            <Button
                android:id="@+id/buttonAddAbilities"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:background="@drawable/btn_app_form"
                android:fontFamily="@font/button_and_text"
                android:text="@string/btn_Add"
                android:textColor="@color/button_text_color" />

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>