<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp">

        <Button
            android:id="@+id/buttonNotes"
            android:text="@string/btn_Notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:background="@color/main_background"
            android:layout_weight="1"
            android:fontFamily="@font/button_and_text"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            android:onClick="onClickOpenNotes"
            />

        <Button
            android:id="@+id/buttonGameCounters"
            android:onClick="onClickOpenGameCounters"
            android:text="@string/btn_GameCounters"
            android:layout_width="match_parent"
            android:background="@color/main_background"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/button_text_color"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/button_and_text"
            android:layout_marginLeft="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp">


        <Button
            android:id="@+id/buttonOpenDice"
            android:text="@string/btn_OpenDice"
            android:onClick="onClickOpenDice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_background"
            android:fontFamily="@font/button_and_text"
            android:padding="@dimen/menu_btn_items_paddings"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>
